--- a/.editorconfig
+++ b/.editorconfig
@@ -120,7 +120,7 @@ ij_xml_space_around_equals_in_attribute = false
 ij_xml_space_inside_empty_tag = false
 ij_xml_text_wrap = normal
 
-[{*.ats,*.cts,*.mts,*.ts,*.tsx}]
+[{*.ats,*.cts,*.mts,*.ts,*.tsx,*.json}]
 indent_size = 4
 indent_style = tab
 tab_width = 4
@@ -701,7 +701,7 @@ ij_php_version_weight = 28
 ij_php_while_brace_force = never
 ij_php_while_on_new_line = false
 
-[{*.har,*.jsb2,*.jsb3,*.json,.babelrc,.eslintrc,.prettierrc,.stylelintrc,bowerrc,composer.lock,jest.config}]
+[{*.har,*.jsb2,*.jsb3,.babelrc,.eslintrc,.prettierrc,.stylelintrc,bowerrc,composer.lock,jest.config}]
 indent_size = 2
 ij_visual_guides = none
 ij_json_array_wrapping = split_into_lines
