Inpsyde Modularity is a Required Dependency

--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "php": ">=8.1"
+    "php": ">=8.1",
+    "inpsyde/modularity": "^1.5"
   },
   "require-dev": {
-    "inpsyde/modularity": "^1.5",
     "inpsyde/php-coding-standards": "^1.0",
     "roots/wordpress-no-content": "^6.5"
   },
