--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,17 @@
 	"require-dev": {
 		"inpsyde/php-coding-standards": "^1.0",
 		"roots/wordpress-no-content": "^6.5",
-		"vimeo/psalm": "^5.23"
+		"vimeo/psalm": "^5.23",
+		"pestphp/pest": "^2.34"
 	},
 	"autoload": {
 		"psr-4": {
 			"Widoz\\WP\\Konomi\\": "sources/server/src/"
+		}
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"Widoz\\WP\\Konomi\\Tests\\": "tests/php/"
 		}
 	},
 	"config": {
@@ -29,7 +35,8 @@
 			"php": "8.1"
 		},
 		"allow-plugins": {
-			"dealerdirect/phpcodesniffer-composer-installer": true
+			"dealerdirect/phpcodesniffer-composer-installer": true,
+			"pestphp/pest-plugin": true
 		}
 	},
 	"scripts": {
