--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
 		"inpsyde/php-coding-standards": "^1.0",
 		"roots/wordpress-no-content": "^6.5",
 		"vimeo/psalm": "^5.23",
-		"pestphp/pest": "^2.34"
+		"pestphp/pest": "^2.34",
+		"brain/monkey": "^2.6",
+		"mockery/mockery": "^1.6"
 	},
 	"autoload": {
 		"psr-4": {
@@ -42,6 +44,7 @@
 	"scripts": {
 		"cs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs",
 		"cs:fix": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcbf",
-		"psalm": "@php ./vendor/bin/psalm"
+		"psalm": "@php ./vendor/bin/psalm",
+		"test": "@php ./vendor/bin/pest"
 	}
 }
