--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,19 @@
 	"require-dev": {
 		"inpsyde/php-coding-standards": "^1.0",
 		"roots/wordpress-no-content": "^6.5",
-		"vimeo/psalm": "^5.23"
+		"vimeo/psalm": "^5.23",
+		"pestphp/pest": "^2.34",
+		"brain/monkey": "^2.6",
+		"mockery/mockery": "^1.6"
 	},
 	"autoload": {
 		"psr-4": {
 			"Widoz\\WP\\Konomi\\": "sources/server/src/"
+		}
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"Widoz\\WP\\Konomi\\Tests\\": "tests/php/"
 		}
 	},
 	"config": {
@@ -29,12 +37,14 @@
 			"php": "8.1"
 		},
 		"allow-plugins": {
-			"dealerdirect/phpcodesniffer-composer-installer": true
+			"dealerdirect/phpcodesniffer-composer-installer": true,
+			"pestphp/pest-plugin": true
 		}
 	},
 	"scripts": {
 		"cs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs",
 		"cs:fix": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcbf",
-		"psalm": "@php ./vendor/bin/psalm"
+		"psalm": "@php ./vendor/bin/psalm",
+		"test": "@php ./vendor/bin/pest"
 	}
 }
