Introduce additional EsLint Max Rules
Introducing some rules to restrict levels, depth and lines width of code

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,13 +33,21 @@
 		"consistent-return": "off",
 		"dot-notation": "off",
 		"init-declarations": "off",
-		"no-undef-init": "error",
 		"max-params": "off",
-		"no-implicit-globals": "error",
 		"no-throw-literal": "off",
 		"no-useless-constructor": "off",
 		"prefer-promise-reject-errors": "off",
 		"no-return-await": "off",
+		"no-undef-init": "error",
+		"no-implicit-globals": "error",
+		"max-depth": ["error", 2],
+		"max-lines": ["error", {"max": 300, "skipBlankLines": false, "skipComments": false}],
+		"max-statements-per-line": ["error", {"max": 1}],
+		"complexity": ["error", 2],
+		"max-lines-per-function": ["error", 25],
+		"max-nested-callbacks": ["error", 2],
+		"no-multiple-empty-lines": ["error", {"max": 1, "maxEOF": 1, "maxBOF": 0}],
+		"max-classes-per-file": ["error", 1],
 		"@typescript-eslint/consistent-indexed-object-style": "warn",
 		"@typescript-eslint/prefer-literal-enum-member": "warn",
 		"@typescript-eslint/prefer-string-starts-ends-with": "warn",
