--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,24 +1,11 @@
 {
 	"env": {
-		"browser": false,
+		"browser": true,
 		"es2023": true
 	},
 	"extends": [
 		"eslint:recommended",
 		"plugin:@typescript-eslint/recommended"
-	],
-	"overrides": [
-		{
-			"env": {
-				"node": true
-			},
-			"files": [
-				".eslintrc.{js,cjs}"
-			],
-			"parserOptions": {
-				"sourceType": "script"
-			}
-		}
 	],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
