--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"Widoz\\Wp\\Konomi\\": "sources/server/src/"
+			"Widoz\\Wp\\Konomi\\": "sources/"
 		}
 	},
 	"config": {
