--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
 		"node": "20"
 	},
 	"devDependencies": {
-		"@types/react": "~18.2.0",
 		"@faker-js/faker": "^8",
 		"@jest/globals": "^29.4.3",
 		"@testing-library/dom": "^9.3.1",
@@ -16,6 +15,7 @@
 		"@testing-library/react": "^14.0.0",
 		"@testing-library/user-event": "^14.5.1",
 		"@total-typescript/shoehorn": "^0.1.0",
+		"@types/react": "~18.2.0",
 		"@wordpress/create-block": "^4.41.0",
 		"@wordpress/dependency-extraction-webpack-plugin": "^4.8.0",
 		"@wordpress/env": "^5.9.0",
@@ -32,6 +32,8 @@
 	"dependencies": {
 		"@wordpress/block-editor": "^12.25.0",
 		"@wordpress/blocks": "^12.34.0",
+		"@wordpress/compose": "^6.35.0",
+		"@wordpress/data": "^9.28.0",
 		"@wordpress/i18n": "^4.57.0",
 		"react": "~18.2.0"
 	},
@@ -39,9 +41,9 @@
 		"wp-env": "wp-env",
 		"build": "wp-scripts build --webpack-src-dir=./sources/Blocks/like",
 		"build:dev": "wp-scripts start --webpack--devtool=inline-source-map --webpack-src-dir=./sources/Blocks/like",
-		"cs:fix": "wp-scripts format ./sources/client",
-		"lint:js": "wp-scripts lint-js ./sources/client",
-		"lint:js:fix": "wp-scripts lint-js --fix ./sources/client",
+		"cs:fix": "wp-scripts format ./sources",
+		"lint:js": "wp-scripts lint-js ./sources",
+		"lint:js:fix": "wp-scripts lint-js --fix ./sources",
 		"test": "jest",
 		"test:update-snapshots": "yarn test -u"
 	}
