--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,17 +4,26 @@
 		"es2023": true
 	},
 	"extends": [
-		"eslint:recommended",
-		"plugin:@typescript-eslint/recommended"
+		"plugin:@wordpress/eslint-plugin/recommended"
 	],
-	"parser": "@typescript-eslint/parser",
+	"settings": {
+		"import/resolver": "typescript"
+	},
 	"parserOptions": {
 		"ecmaVersion": "latest",
 		"sourceType": "module",
 		"project": "./tsconfig.json"
 	},
-	"plugins": [
-		"@typescript-eslint"
+	"overrides": [
+		{
+			"files": ["webpack.config.js"],
+			"env": {
+				"node": true
+			},
+			"rules": {
+				"@typescript-eslint/no-var-requires": "off"
+			}
+		}
 	],
 	"rules": {
 		"consistent-return": "off",
@@ -51,7 +60,6 @@
 		"@typescript-eslint/prefer-readonly": "error",
 		"@typescript-eslint/prefer-readonly-parameter-types": "error",
 		"@typescript-eslint/prefer-reduce-type-parameter": "error",
-		"@typescript-eslint/consistent-return": "error",
 		"@typescript-eslint/explicit-function-return-type": "error",
 		"@typescript-eslint/explicit-module-boundary-types": "error",
 		"@typescript-eslint/dot-notation": "error",
