--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"@testing-library/react": "^14.0.0",
 		"@testing-library/user-event": "^14.5.1",
 		"@total-typescript/shoehorn": "^0.1.0",
+		"@types/react": "~18.2.0",
+		"@wordpress/create-block": "^4.41.0",
 		"@wordpress/dependency-extraction-webpack-plugin": "^4.8.0",
 		"@wordpress/env": "^5.9.0",
 		"@wordpress/scripts": "^26.0.0",
@@ -24,7 +26,8 @@
 		"ts-jest": "^29.0.5",
 		"ts-loader": "^9.4.2",
 		"ts-node": "^10.9.1",
-		"typescript": "~5.1.0",
+		"typescript": "~5.3.0",
+		"typescript-eslint": "^7.10.0",
 		"yarn": "^1.22.19"
 	},
 	"dependencies": {
@@ -32,11 +35,11 @@
 	},
 	"scripts": {
 		"wp-env": "wp-env",
-		"build": "wp-scripts build --webpack-src-dir=./sources/client/src",
-		"build:dev": "wp-scripts start --webpack--devtool=inline-source-map --webpack-src-dir=./sources/client/src",
-		"cs:fix": "wp-scripts format ./sources/client",
-		"lint:js": "wp-scripts lint-js ./sources/client",
-		"lint:js:fix": "wp-scripts lint-js --fix ./sources/client",
+		"build": "wp-scripts build --webpack-src-dir=./sources/Blocks/like",
+		"build:dev": "wp-scripts start --webpack--devtool=inline-source-map --webpack-src-dir=./sources/Blocks/like",
+		"cs:fix": "wp-scripts format ./sources ./@types",
+		"lint:js": "wp-scripts lint-js ./sources ./@types",
+		"lint:js:fix": "wp-scripts lint-js --fix ./sources ./@types",
 		"test": "jest",
 		"test:update-snapshots": "yarn test -u"
 	}
