--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,10 @@
 	"autoload": {
 		"psr-4": {
 			"Widoz\\Wp\\Konomi\\": "sources/"
-		}
+		},
+		"files": [
+			"sources/Functions/package.php"
+		]
 	},
 	"config": {
 		"platform": {
