--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
 			"Widoz\\Wp\\Konomi\\": "sources/"
 		},
 		"files": [
-			"sources/Functions/api.php",
-			"sources/Functions/package.php"
+			"sources/Icons/api.php",
+			"sources/package.php"
 		]
 	},
 	"config": {
