--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,6 +42,9 @@
 			"@konomi/configuration": [
 				"./sources/Configuration/client"
 			],
+			"@konomi/icons": [
+				"./sources/Icons/client"
+			],
 			"@wordpress/block-editor": [
 				"./node_modules/@wordpress/block-editor/src"
 			],
