--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"@wordpress/create-block": "^4.41.0",
 		"@wordpress/dependency-extraction-webpack-plugin": "^4.8.0",
 		"@wordpress/env": "^5.9.0",
-		"@wordpress/scripts": "^26.0.0",
+		"@wordpress/scripts": "^28.0.0",
 		"eslint-import-resolver-typescript": "^3.5.5",
 		"jest": "^29.4.3",
 		"jest-environment-jsdom": "^29.5.0",
@@ -36,12 +36,13 @@
 		"@wordpress/compose": "^6.35.0",
 		"@wordpress/data": "^9.28.0",
 		"@wordpress/i18n": "^4.57.0",
+		"@wordpress/interactivity": "^6.1.0",
 		"react": "~18.2.0"
 	},
 	"scripts": {
 		"wp-env": "wp-env",
 		"build": "wp-scripts build --webpack-src-dir=./sources/Blocks/like",
-		"build:dev": "wp-scripts start --webpack--devtool=inline-source-map --webpack-src-dir=./sources/Blocks/like",
+		"build:dev": "wp-scripts start --experimental-modules --webpack--devtool=inline-source-map --webpack-src-dir=./sources/Blocks/like",
 		"cs:fix": "wp-scripts format ./sources ./@types",
 		"lint:js": "wp-scripts lint-js ./sources ./@types",
 		"lint:js:fix": "wp-scripts lint-js --fix ./sources ./@types",
