--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"yarn": "^1.22.19"
 	},
 	"dependencies": {
+		"@wordpress/api-fetch": "^7.1.0",
 		"@wordpress/block-editor": "^12.25.0",
 		"@wordpress/blocks": "^12.35.0",
 		"@wordpress/compose": "^6.35.0",
