--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"@total-typescript/shoehorn": "^0.1.0",
 		"@types/react": "~18.2.0",
 		"@wordpress/create-block": "^4.41.0",
-		"@wordpress/dependency-extraction-webpack-plugin": "^4.8.0",
+		"@wordpress/dependency-extraction-webpack-plugin": "^6.2.0",
 		"@wordpress/env": "^5.9.0",
 		"@wordpress/scripts": "^28.0.0",
 		"eslint-import-resolver-typescript": "^3.5.5",
@@ -43,7 +43,8 @@
 	"scripts": {
 		"wp-env": "wp-env",
 		"build": "wp-scripts build --webpack-src-dir=./sources/Blocks/like",
-		"build:dev": "wp-scripts start --experimental-modules --webpack--devtool=inline-source-map --webpack-src-dir=./sources/Blocks/like",
+		"build:dev:back-office": "wp-scripts start --config webpack.backoffice.config.js --webpack--devtool=inline-source-map",
+		"build:dev:modules": "wp-scripts start --experimental-modules --config webpack.modules.config.js --webpack--devtool=inline-source-map",
 		"cs:fix": "wp-scripts format ./sources ./@types",
 		"lint:js": "wp-scripts lint-js ./sources ./@types",
 		"lint:js:fix": "wp-scripts lint-js --fix ./sources ./@types",
