Remove irrelevant ts configuration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -58,8 +58,7 @@
 	},
 	"include": [
 		"./sources",
-		"./@types",
-		"./node_modules/@wordpress/**/src/**/*"
+		"./@types"
 	],
 	"exclude": [
 		"**/dist/",
