--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
 	},
 	"scripts": {
 		"wp-env": "wp-env",
-		"build:dev:scripts": "wp-scripts start --config webpack.scripts.config.js --webpack--devtool=inline-source-map",
-		"build:dev:modules": "wp-scripts start --experimental-modules --config webpack.modules.config.js --webpack--devtool=inline-source-map",
+		"build:dev:scripts": "tsc --noEmit && wp-scripts start --config webpack.scripts.config.js --webpack--devtool=inline-source-map",
+		"build:dev:modules": "tsc --noEmit && wp-scripts start --experimental-modules --config webpack.modules.config.js --webpack--devtool=inline-source-map",
 		"cs:fix": "wp-scripts format ./sources ./@types",
 		"lint:js": "wp-scripts lint-js ./sources ./@types",
 		"lint:js:fix": "wp-scripts lint-js --fix ./sources ./@types",
