--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,22 +3,15 @@
 		"target": "ES2022",
 		"checkJs": true,
 		"allowJs": true,
-		"alwaysStrict": true,
 		"exactOptionalPropertyTypes": true,
 		"noFallthroughCasesInSwitch": true,
-		"noImplicitAny": true,
 		"noImplicitOverride": true,
 		"noImplicitReturns": true,
-		"noImplicitThis": true,
-		"strictNullChecks": true,
-		"strictFunctionTypes": true,
-		"strictPropertyInitialization": true,
 		"noPropertyAccessFromIndexSignature": true,
 		"noUncheckedIndexedAccess": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"strict": true,
-		"useUnknownInCatchVariables": true,
 		"resolveJsonModule": true,
 		"sourceMap": true,
 		"jsx": "react",
@@ -26,7 +19,7 @@
 		"esModuleInterop": true,
 		"baseUrl": ".",
 		"module": "ESNext",
-		"moduleResolution": "NodeNext",
+		"moduleResolution": "Bundler",
 		"typeRoots": [
 			"./node_modules/@types",
 			"./@types"
@@ -62,6 +55,7 @@
 	],
 	"exclude": [
 		"**/dist/",
+		"**/build-module/",
 		"node_modules",
 		"tests"
 	]
