--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"lint:css": "wp-scripts lint-style ./sources/**/*.scss --ignore-path .stylelintignore --config .stylelintrc.json",
 		"lint:css:fix": "wp-scripts lint-style ./sources/**/*.scss --fix",
 		"test": "jest",
-		"test:update-snapshots": "yarn test -u"
+		"test:update-snapshots": "yarn test -u",
+		"qa": "yarn lint:js && yarn lint:css"
 	}
 }
