Eslint: Don't use flat configuration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,9 +10,10 @@
 		"import/resolver": "typescript"
 	},
 	"parserOptions": {
+		"project": true,
 		"ecmaVersion": "latest",
 		"sourceType": "module",
-		"project": "./tsconfig.json"
+		"tsconfigRootDir": "./"
 	},
 	"overrides": [
 		{
