--- a/.eslintignore
+++ b/.eslintignore
@@ -1,12 +1,13 @@
-build-module
-dist
-
-./vendor
-./node_modules
-
 .psalm
 .github
 
-./coverage
+build-module
+dist
+vendor
+node_modules
+tests
+coverage
 
 jest.config.ts
+webpack.modules.config.js
+webpack.scripts.config.js
