--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
 	"name": "konomi",
 	"description": "A WordPress plugin to save posts as favorite using the new Interactive API",
 	"author": "guido scialfa <dev@guidoscialfa.com>",
-	"main": "./build/index.js",
 	"license": "GPL-2.0-or-later",
 	"engines": {
 		"node": "20"
@@ -19,10 +18,10 @@
 		"@wordpress/dependency-extraction-webpack-plugin": "^5.0.0",
 		"@wordpress/env": "^5.9.0",
 		"@wordpress/scripts": "^28.0.0",
+		"babel-jest": "^29.7.0",
 		"eslint-import-resolver-typescript": "^3.5.5",
 		"jest": "^29.4.3",
 		"jest-environment-jsdom": "^29.5.0",
-		"ts-jest": "^29.0.5",
 		"ts-loader": "^9.4.2",
 		"ts-node": "^10.9.1",
 		"typescript": "~5.3.0",
@@ -30,12 +29,12 @@
 		"yarn": "^1.22.19"
 	},
 	"dependencies": {
-		"@wordpress/components": "^28.4.0",
-		"@wordpress/create-block": "^4.41.0",
 		"@wordpress/api-fetch": "^7.1.0",
 		"@wordpress/block-editor": "^12.25.0",
 		"@wordpress/blocks": "^12.35.0",
+		"@wordpress/components": "^28.4.0",
 		"@wordpress/compose": "^6.35.0",
+		"@wordpress/create-block": "^4.41.0",
 		"@wordpress/data": "^9.28.0",
 		"@wordpress/i18n": "^4.57.0",
 		"@wordpress/interactivity": "^6.1.0",
