--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
 			"Widoz\\Wp\\Konomi\\": "sources/"
 		},
 		"files": [
+			"sources/Functions/filters.php",
 			"sources/package.php",
 			"sources/Blocks/api.php",
 			"sources/Icons/api.php"
