Add ItemCache and Repository Tests
Reorganized a bit the tests

Signed-off-by: guido <dev@guidoscialfa.com>

--- a/.github/workflows/php-qa.yml
+++ b/.github/workflows/php-qa.yml
@@ -41,3 +41,6 @@ jobs:
 
       - name: Integration Tests
         run: composer test:integration
+
+      - name: Integration Tests
+        run: composer test:functional
