--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
 		"psr-4": {
 			"Widoz\\Wp\\Konomi\\Tests\\": "tests/",
 			"Widoz\\Wp\\Konomi\\Tests\\Unit\\": "tests/unit/php",
-			"Widoz\\Wp\\Konomi\\Tests\\Integration\\": "tests/unit/integration"
+			"Widoz\\Wp\\Konomi\\Tests\\Integration\\": "tests/integration/php",
+			"Widoz\\Wp\\Konomi\\Tests\\Functional\\": "tests/functional/php"
 		}
 	},
 	"config": {
