--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,7 +1,9 @@
 parameters:
-	level: 7
+	level: 9
 	paths:
 		- sources
 	scanFiles:
 		- vendor/inpsyde/wp-stubs-versions/6.7.php
 	treatPhpDocTypesAsCertain: false
+includes:
+	- vendor/bnf/phpstan-psr-container/extension.neon
