--- a/.editorconfig
+++ b/.editorconfig
@@ -249,7 +249,7 @@ ij_typescript_spaces_around_relational_operators = true
 ij_typescript_spaces_around_shift_operators = true
 ij_typescript_spaces_around_unary_operator = false
 ij_typescript_spaces_within_array_initializer_brackets = true
-ij_typescript_spaces_within_brackets = false
+ij_typescript_spaces_within_brackets = true
 ij_typescript_spaces_within_catch_parentheses = true
 ij_typescript_spaces_within_for_parentheses = true
 ij_typescript_spaces_within_if_parentheses = true
@@ -259,7 +259,7 @@ ij_typescript_spaces_within_method_call_parentheses = true
 ij_typescript_spaces_within_method_parentheses = true
 ij_typescript_spaces_within_object_literal_braces = true
 ij_typescript_spaces_within_object_type_braces = true
-ij_typescript_spaces_within_parentheses = false
+ij_typescript_spaces_within_parentheses = true
 ij_typescript_spaces_within_switch_parentheses = true
 ij_typescript_spaces_within_type_assertion = false
 ij_typescript_spaces_within_union_types = true
@@ -430,7 +430,7 @@ ij_javascript_spaces_around_relational_operators = true
 ij_javascript_spaces_around_shift_operators = true
 ij_javascript_spaces_around_unary_operator = false
 ij_javascript_spaces_within_array_initializer_brackets = false
-ij_javascript_spaces_within_brackets = false
+ij_javascript_spaces_within_brackets = true
 ij_javascript_spaces_within_catch_parentheses = false
 ij_javascript_spaces_within_for_parentheses = false
 ij_javascript_spaces_within_if_parentheses = false
@@ -440,7 +440,7 @@ ij_javascript_spaces_within_method_call_parentheses = false
 ij_javascript_spaces_within_method_parentheses = false
 ij_javascript_spaces_within_object_literal_braces = true
 ij_javascript_spaces_within_object_type_braces = true
-ij_javascript_spaces_within_parentheses = false
+ij_javascript_spaces_within_parentheses = true
 ij_javascript_spaces_within_switch_parentheses = false
 ij_javascript_spaces_within_type_assertion = false
 ij_javascript_spaces_within_union_types = true
