--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@types/react": "~18.2.0",
 		"@wordpress/dependency-extraction-webpack-plugin": "^5.0.0",
 		"@wordpress/env": "^10.9.0",
+		"@wordpress/eslint-plugin": "^22.8.0",
 		"@wordpress/scripts": "^30.0.0",
 		"eslint-import-resolver-typescript": "^3.5.5",
 		"jest": "^29.4.3",
