--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"author": "guido scialfa <dev@guidoscialfa.com>",
 	"license": "GPL-2.0-or-later",
 	"engines": {
-		"node": "20"
+		"node": ">= 20"
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^8",
