Refactor tsconfig.json for improved readability
Signed-off-by: Guido Scialfa <dev@guidoscialfa.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,46 +20,21 @@
 		"baseUrl": ".",
 		"module": "ESNext",
 		"moduleResolution": "Bundler",
-		"typeRoots": [
-			"./node_modules/@types",
-			"./@types"
-		],
+		"typeRoots": [ "./node_modules/@types", "./@types" ],
 		"rootDir": "./",
 		"paths": {
-			"@konomi/wp-types": [
-				"./@types/wp"
-			],
-			"@konomi/types": [
-				"./@types"
-			],
-			"@konomi/api-fetch": [
-				"./sources/ApiFetch/client"
-			],
-			"@konomi/configuration": [
-				"./sources/Configuration/client"
-			],
-			"@konomi/icons": [
-				"./sources/Icons/client"
-			],
+			"@konomi/wp-types": [ "./@types/wp" ],
+			"@konomi/types": [ "./@types" ],
+			"@konomi/api-fetch": [ "./sources/ApiFetch/client" ],
+			"@konomi/configuration": [ "./sources/Configuration/client" ],
+			"@konomi/icons": [ "./sources/Icons/client" ],
 			"@wordpress/block-editor": [
 				"./node_modules/@wordpress/block-editor/src"
 			],
-			"@wordpress/blocks": [
-				"./node_modules/@wordpress/blocks/src"
-			],
-			"@test/helpers": [
-				"./tests/helpers.ts"
-			]
+			"@wordpress/blocks": [ "./node_modules/@wordpress/blocks/src" ],
+			"@test/helpers": [ "./tests/helpers.ts" ]
 		}
 	},
-	"include": [
-		"./sources",
-		"./@types"
-	],
-	"exclude": [
-		"**/dist/",
-		"**/build-module/",
-		"node_modules",
-		"tests"
-	]
+	"include": [ "./sources", "./@types" ],
+	"exclude": [ "**/dist/", "**/build-module/", "node_modules", "tests" ]
 }
