--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@testing-library/user-event": "^14.5.1",
 		"@total-typescript/shoehorn": "^0.1.0",
 		"@types/react": "~18.2.0",
+		"@types/react-dom": "~18.2.0",
 		"@wordpress/dependency-extraction-webpack-plugin": "^5.0.0",
 		"@wordpress/env": "^10.9.0",
 		"@wordpress/eslint-plugin": "^22.8.0",
@@ -22,6 +23,7 @@
 		"eslint-import-resolver-typescript": "^3.5.5",
 		"jest": "^29.4.3",
 		"jest-environment-jsdom": "^29.5.0",
+		"react-dom": "~18.2.0",
 		"ts-loader": "^9.4.2",
 		"ts-node": "^10.9.1",
 		"typescript": "~5.3.0",
