Fix workflow condition formatting and rename Integration Tests step to Functional Tests
Signed-off-by: Guido Scialfa <dev@guidoscialfa.com>

--- a/.github/workflows/php-qa.yml
+++ b/.github/workflows/php-qa.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: '!contains(github.event.head_commit.message, "--skip ci") && !github.event.pull_request.draft'
+    if: "!contains(github.event.head_commit.message, '--skip ci') && !github.event.pull_request.draft"
     strategy:
       matrix:
         php-versions: [ '8.1', '8.2', '8.3' ]
@@ -42,5 +42,5 @@ jobs:
       - name: Integration Tests
         run: composer test:integration
 
-      - name: Integration Tests
+      - name: Functional Tests
         run: composer test:functional
