Fix typo in Unit Tests step name in PHP QA workflow
Signed-off-by: Guido Scialfa <dev@guidoscialfa.com>

--- a/.github/workflows/php-qa.yml
+++ b/.github/workflows/php-qa.yml
@@ -37,7 +37,7 @@ jobs:
         run: composer analysis:ci
 
       - name: Unit Tests
-        run: composer test:init
+        run: composer test:unit
 
       - name: Integration Tests
         run: composer test:integration
