--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"wp-env": "wp-env",
 		"build:dev:scripts": "tsc --noEmit && wp-scripts start --config webpack.scripts.config.js --webpack--devtool=inline-source-map",
 		"build:dev:modules": "tsc --noEmit && wp-scripts start --experimental-modules --config webpack.modules.config.js --webpack--devtool=inline-source-map",
+		"build:blocks-manifest": "wp-scripts build-blocks-manifest --input=./sources/Blocks --output=./sources/Blocks/blocks-manifest.php",
 		"cs:fix": "wp-scripts format ./sources ./@types",
 		"lint:js": "wp-scripts lint-js ./sources ./@types",
 		"lint:js:fix": "wp-scripts lint-js --fix ./sources ./@types",
