--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
 		"eslint-import-resolver-typescript": "^3.5.5",
 		"jest": "^29.4.3",
 		"jest-environment-jsdom": "^29.5.0",
-		"react-dom": "~18.2.0",
 		"ts-loader": "^9.4.2",
 		"ts-node": "^10.9.1",
 		"typescript": "~5.3.0",
@@ -32,14 +31,15 @@
 	},
 	"dependencies": {
 		"@wordpress/api-fetch": "^7.1.0",
-		"@wordpress/block-editor": "^12.25.0",
+		"@wordpress/block-editor": "^14.18.0",
 		"@wordpress/blocks": "^12.35.0",
 		"@wordpress/components": "^28.4.0",
 		"@wordpress/compose": "^6.35.0",
 		"@wordpress/data": "^9.28.0",
 		"@wordpress/i18n": "^4.57.0",
 		"@wordpress/interactivity": "^6.1.0",
-		"react": "~18.2.0"
+		"react": "~18.2.0",
+		"react-dom": "~18.2.0"
 	},
 	"scripts": {
 		"wp-env": "wp-env",
