--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@wordpress/env": "^10.9.0",
 		"@wordpress/eslint-plugin": "^22.8.0",
 		"@wordpress/scripts": "^30.0.0",
+		"clean-webpack-plugin": "^4.0.0",
 		"eslint-import-resolver-typescript": "^3.5.5",
 		"jest": "^29.4.3",
 		"jest-environment-jsdom": "^29.5.0",
