--- a/composer.json
+++ b/composer.json
@@ -70,12 +70,15 @@
 		"test:unit": "@php ./vendor/bin/pest --testsuite=unit",
 		"test:integration": "@php ./vendor/bin/pest --testsuite=integration",
 		"test:functional": "@php ./vendor/bin/pest --testsuite=functional",
-		"qa": [
-			"@cs",
-			"@analysis",
+		"tests": [
 			"@test:unit",
 			"@test:integration",
 			"@test:functional"
+		],
+		"qa": [
+			"@cs",
+			"@analysis",
+			"@tests"
 		]
 	}
 }
