Update .gitattributes and GitHub Actions workflow to include generated directories and change build command
Signed-off-by: Guido Scialfa <dev@guidoscialfa.com>

--- a/.github/workflows/js-artifacts.yml
+++ b/.github/workflows/js-artifacts.yml
@@ -39,5 +39,5 @@ jobs:
           GIT_EMAIL: ${{ secrets.GIT_EMAIL }}
           HUSKY: 0
         with:
-          command: 'yarn build:dev:scripts'
+          command: 'yarn build'
           target-dir: './sources'
