Add permissions section to GitHub Actions workflow for write access
Signed-off-by: Guido Scialfa <dev@guidoscialfa.com>

--- a/.github/workflows/js-artifacts.yml
+++ b/.github/workflows/js-artifacts.yml
@@ -15,6 +15,10 @@ on:
       - 'tsconfig.json'
       - 'webpack.modules.config.js'
       - 'webpack.scripts.config.js'
+
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
