--- a/.editorconfig
+++ b/.editorconfig
@@ -755,6 +755,7 @@ ij_markdown_wrap_text_inside_blockquotes = true
 
 [{*.yaml,*.yml}]
 ij_visual_guides =
+indent_style = space
 ij_yaml_align_values_properties = do_not_align
 ij_yaml_autoinsert_sequence_marker = true
 ij_yaml_block_mapping_on_new_line = false
