Update .gitattributes to include all dist and build files; refine workflow trigger paths
Signed-off-by: Guido Scialfa <dev@guidoscialfa.com>

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 * text eol=lf
 
-/sources/**/dist/ linguist-generated
-/sources/**/build-*/ linguist-generated
++/sources/**/dist/** linguist-generated
++/sources/**/build-*/** linguist-generated
