--- a/.github/workflows/js-artifacts.yml
+++ b/.github/workflows/js-artifacts.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - main
     paths:
-      - '.github/**'
+      - '.github/workflows/js-artifacts.yml'
       - 'package.json'
       - 'yarn.lock'
       - 'tsconfig.json'
