--- a/.github/workflows/js-artifacts.yml
+++ b/.github/workflows/js-artifacts.yml
@@ -7,6 +7,9 @@ on:
     branches:
       - main
     paths:
+      - 'sources/**.ts'
+      - 'sources/**.tsx'
+      - 'sources/**.scss'
       - '.github/workflows/js-artifacts.yml'
       - 'package.json'
       - 'yarn.lock'
