Update workflow to include additional resource file paths for artifact generation
Signed-off-by: Guido Scialfa <dev@guidoscialfa.com>

--- a/.github/workflows/js-artifacts.yml
+++ b/.github/workflows/js-artifacts.yml
@@ -10,6 +10,7 @@ on:
       - 'sources/**.ts'
       - 'sources/**.tsx'
       - 'sources/**.scss'
+      - 'resources/**.scss'
       - '.github/workflows/js-artifacts.yml'
       - 'package.json'
       - 'yarn.lock'
