--- a/.github/workflows/js-qa.yml
+++ b/.github/workflows/js-qa.yml
@@ -14,6 +14,7 @@ on:
             - 'resources/**.ts'
             - 'resources/**.tsx'
             - 'resources/**.scss'
+
 jobs:
     js-qa:
         runs-on: ubuntu-latest
@@ -33,3 +34,9 @@ jobs:
               uses: borales/actions-yarn@v3.0.0
               with:
                   cmd: yarn qa
+
+            - name: Upload coverage reports to Codecov
+              uses: codecov/codecov-action@v5
+              with:
+                token: ${{ secrets.CODECOV_TOKEN }}
+                slug: widoz/konomi
