--- a/.github/workflows/js-qa.yml
+++ b/.github/workflows/js-qa.yml
@@ -39,4 +39,4 @@ jobs:
               uses: codecov/codecov-action@v5
               with:
                 token: ${{ secrets.CODECOV_TOKEN }}
-                slug: widoz/konomi
+                slug: ${{ github.repository }}
