--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"lint:css:fix": "wp-scripts lint-style ./sources/**/*.scss --fix",
 		"test": "jest",
 		"test:update-snapshots": "yarn test -u",
-		"qa": "yarn lint:js && yarn lint:css && yarn test"
+		"test:coverage": "jest --coverage",
+		"qa": "yarn lint:js && yarn lint:css && yarn test:coverage"
 	}
 }
