Rename jobs in GitHub workflows for clarity: 'js-qa' to 'linting' and 'testing-coverage'
Signed-off-by: Guido Scialfa <dev@guidoscialfa.com>

--- a/.github/workflows/js-testing-coverage.yml
+++ b/.github/workflows/js-testing-coverage.yml
@@ -16,7 +16,7 @@ on:
             - 'resources/**.scss'
 
 jobs:
-    js-qa:
+    testing-coverage:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
