--- a/.github/workflows/client-linting.yml
+++ b/.github/workflows/client-linting.yml
@@ -16,7 +16,7 @@ on:
             - 'resources/**.scss'
 
 jobs:
-    js-qa:
+    linting:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
