Refactor CI workflows to standardize 'if' conditions for skipping jobs and rename PHP job for clarity
Signed-off-by: Guido Scialfa <dev@guidoscialfa.com>

--- a/.github/workflows/php-qa.yml
+++ b/.github/workflows/php-qa.yml
@@ -9,9 +9,9 @@ on:
       - '**.php'
 
 jobs:
-  build:
+  server-linting:
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '--skip ci') && !github.event.pull_request.draft"
+    if: ${{ !contains(github.event.head_commit.message, '--skip ci') && !github.event.pull_request.draft }}
     strategy:
       matrix:
         php-versions: [ '8.1', '8.2', '8.3' ]
