--- a/.github/workflows/js-testing-coverage.yml
+++ b/.github/workflows/js-testing-coverage.yml
@@ -18,6 +18,7 @@ on:
 jobs:
     testing-coverage:
         runs-on: ubuntu-latest
+        if: ${{ !contains(github.event.head_commit.message, '--skip ci') && !github.event.pull_request.draft }}
         steps:
             - name: Checkout
               uses: actions/checkout@v3
