--- a/.github/workflows/client-linting.yml
+++ b/.github/workflows/client-linting.yml
@@ -16,7 +16,7 @@ on:
             - 'resources/**.scss'
 
 jobs:
-    linting:
+    client-linting:
         runs-on: ubuntu-latest
         if: ${{ !contains(github.event.head_commit.message, '--skip ci') && !github.event.pull_request.draft }}
         steps:
