--- a/.github/workflows/php-qa.yml
+++ b/.github/workflows/php-qa.yml
@@ -14,7 +14,7 @@ jobs:
     if: ${{ !contains(github.event.head_commit.message, '--skip ci') && !github.event.pull_request.draft }}
     strategy:
       matrix:
-        php-versions: [ '8.1', '8.2', '8.3' ]
+        php-versions: [ '8.1', '8.2', '8.3', '8.4' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
