--- a/.github/workflows/js-testing-coverage.yml
+++ b/.github/workflows/js-testing-coverage.yml
@@ -1,4 +1,4 @@
-name: JS QA
+name: JS Testing Coverage
 
 on:
     pull_request:
@@ -16,24 +16,23 @@ on:
             - 'resources/**.scss'
 
 jobs:
-    js-qa:
+    testing-coverage:
         runs-on: ubuntu-latest
+        if: ${{ !contains(github.event.head_commit.message, '--skip ci') && !github.event.pull_request.draft }}
         steps:
             - name: Checkout
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4
 
             - name: Setup Node
-              uses: actions/setup-node@v2
+              uses: actions/setup-node@v4
               with:
                   node-version: 20
 
             - name: Install
-              run: yarn install
+              run: yarn install --frozen-lockfile
 
-            - name: QA
-              uses: borales/actions-yarn@v3.0.0
-              with:
-                  cmd: yarn qa
+            - name: Coverage
+              run: yarn test:coverage
 
             - name: Upload coverage reports to Codecov
               uses: codecov/codecov-action@v5
